--- a/USBWebserver v8.6/php/php.ini
+++ b/USBWebserver v8.6/php/php.ini
@@ -731,7 +731,7 @@ user_dir =
 ; http://php.net/extension-dir
 ; extension_dir = "./"
 ; On windows:
-extension_dir = "C:/Users/Lucas/AppData/Local/Temp/Rar$EXa1012.35945\php\ext\"
+extension_dir = "C:/Users/Aluno/Desktop/pam/USBWebserver v8.6\php\ext\"
 
 ; Whether or not to enable the dl() function.  The dl() function does NOT work
 ; properly in multithreaded servers, such as IIS or Zeus, and is automatically
